--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 
 APP_NAME=gh_jeffio_test
-APP_HOST=gh_jeffio_test.la
+APP_HOST=http://jeffio-test.gh.waacoo.cc
 APP_DEBUG=false
 APP_TRACE=false
 
@@ -24,6 +24,6 @@ MAIL_ENCRYPTION=null
 
 WECHAT_OFFICIAL_ACCOUNT_APPID=wxdfde904d868dc7bf
 WECHAT_OFFICIAL_ACCOUNT_SECRET=2ce1eedf2c3ba0e8239deb5dd722a496
-WECHAT_OFFICIAL_ACCOUNT_TOKEN=
+WECHAT_OFFICIAL_ACCOUNT_TOKEN=deb5dd722a496
 #EncodingAESKey
 WECHAT_OFFICIAL_ACCOUNT_AES_KEY=
