--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
 
-APP_NAME=gh_jeffio_test
-APP_HOST=http://jeffio-test.gh.waacoo.cc
+APP_NAME=gh
+APP_HOST=
 APP_DEBUG=false
 APP_TRACE=false
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3366
+DB_PORT=3306
 DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 
 REDIS_HOST=127.0.0.1
-REDIS_PORT=6399
+REDIS_PORT=6379
 REDIS_PASSWORD=
 
 MAIL_DRIVER=smtp
@@ -22,8 +22,8 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
-WECHAT_OFFICIAL_ACCOUNT_APPID=wxdfde904d868dc7bf
-WECHAT_OFFICIAL_ACCOUNT_SECRET=2ce1eedf2c3ba0e8239deb5dd722a496
-WECHAT_OFFICIAL_ACCOUNT_TOKEN=deb5dd722a496
+WECHAT_OFFICIAL_ACCOUNT_APPID=
+WECHAT_OFFICIAL_ACCOUNT_SECRET=
+WECHAT_OFFICIAL_ACCOUNT_TOKEN=
 #EncodingAESKey
 WECHAT_OFFICIAL_ACCOUNT_AES_KEY=
